# django-lithium

./: pyproject.toml
django_project/: settings.py
