[project]
name = "lithium"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django ~=6.0",
    "django-allauth[openid,socialaccount] ~=65.13",
    "django-debug-toolbar ~=6.1",
    "crispy-bootstrap5 ~=2025.6",
    "gunicorn ~=23.0",
    "psycopg[binary] ~=3.3",
    "whitenoise ~=6.11",
]

[dependency-groups]
dev = [
    "typing_extensions ~=4.15",
    "ipython>=9.8.0",
]
